[package]
name = "bevy_picking_raycast"
version = "0.18.0"
edition = "2021"
authors = ["Aevyrie <aevyrie@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A modular picking plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "picking", "bevy", "input", "eventlistener"]
categories = ["game-engines"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { git = "https://github.com/bevyengine/bevy.git", rev = "a8751390aa7ceb168d2632b6677804e58ff6d8f0" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", rev = "a8751390aa7ceb168d2632b6677804e58ff6d8f0" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git", rev = "a8751390aa7ceb168d2632b6677804e58ff6d8f0" }
bevy_render = { git = "https://github.com/bevyengine/bevy.git", rev = "a8751390aa7ceb168d2632b6677804e58ff6d8f0" }
bevy_transform = { git = "https://github.com/bevyengine/bevy.git", rev = "a8751390aa7ceb168d2632b6677804e58ff6d8f0" }
bevy_window = { git = "https://github.com/bevyengine/bevy.git", rev = "a8751390aa7ceb168d2632b6677804e58ff6d8f0" }

# bevy_mod_raycast = { version = "0.17.0" }
bevy_mod_raycast = { git = "https://github.com/ImDanTheDev/bevy_mod_raycast.git", rev = "f6ca975520fea1bb64ea24cd0990e43eb212aa0c"}
# Local
bevy_picking_core = { path = "../../crates/bevy_picking_core", version = "0.18" }
